--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -7,7 +7,7 @@ title: ReubenSun
 subtitle: ''
 description: 'Reuben的笔记博客'
 author: Reuben Sun
-language: en
+language: zh-CN
 timezone: ''
 favicon: /images/logo.png
 keywords: 'reuben computer graphics engine Technical Artist'
