--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -10,7 +10,7 @@ author: Reuben Sun
 language: zh-CN
 timezone: ''
 favicon: /images/logo.png
-keywords: 'reuben computer graphics engine Technical Artist'
+keywords: 'reubensun computer graphics engine Technical Artist'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
