--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -7,17 +7,46 @@ on:
   workflow_dispatch:
 
 jobs:
+  sync:
+    name: 'Submodules Sync'
+    runs-on: ubuntu-latest
+
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+      # Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          # Default: ${{ github.token }} ,传参给它更高权限的 token
+          token: ${{ secrets.PERSONAL_TOKEN }}
+
+      # Update references
+      - name: Git Sumbodule Update
+        run: |
+          git pull --recurse-submodules
+          git submodule update --remote --recursive        
+
+      - name: Commit update
+        run: |
+          git config --global user.name 'Git bot'
+          git config --global user.email 'bot@noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git commit -am "Auto updated submodule references" && git push || echo "No changes to commit"   
   pages:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           # Default: ${{ github.token }} ,传参给它更高权限的 token
           token: ${{ secrets.PERSONAL_TOKEN }}
           # 把子模块打开
-          submodules: 'true'
+          submodules: true
       - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
