--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -37,6 +37,7 @@ jobs:
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git commit -am "Auto updated submodule references" && git push || echo "No changes to commit"   
   pages:
+    needs: [sync]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -47,8 +48,6 @@ jobs:
           token: ${{ secrets.PERSONAL_TOKEN }}
           # 把子模块打开
           submodules: true
-      - name: ls
-        run: ls -a blog-note
       - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
