--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -38,7 +38,7 @@ jobs:
           git commit -am "Auto updated submodule references" && git push || echo "No changes to commit"   
   pages:
     needs: [sync]
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     permissions:
       contents: write
     steps:
