--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -40,4 +40,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          commit_message: ${{ github.event.head_commit.message }}
+          commit_message: 'Deploy: ${{ github.event.head_commit.message }}'
