--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main # default branch
   workflow_dispatch:
+    input:
+      name:
+        description: 'Git Message'
+        required: false
+        default: 'Self commit'
 
 jobs:
   pages:
@@ -40,4 +45,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          commit_message: 'Deploy: ${{ github.event.head_commit.message }}'
+          commit_message: 'Deploy: ${{ github.event.inputs.name }}'
