fix input debug

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,7 @@ name: Sync
 
 on:
   workflow_dispatch:
-      input:
+      inputs:
         name:
           description: 'Git Message'
           required: false
