--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -39,4 +39,4 @@ jobs:
           git config --global user.name 'Git bot'
           git config --global user.email 'bot@noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git commit -am "Submodule: ${{github.event.input.name}}" && git push || echo "No changes to commit"   
+          git commit -am "Submodule: ${{github.event.inputs.name}}" && git push || echo "No changes to commit"   
