--- a/themes/volantis/_config.yml
+++ b/themes/volantis/_config.yml
@@ -166,7 +166,7 @@ cover:
     home: true
     archive: true
     others: false # can be written in front-matter 'cover: true'
-  background: /images/bg.png
+  background: /images/bg.jpg
   # background: https://bing.ioliu.cn/v1/rand?w=1920&h=1200
   logo: # https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/Logo-Cover@3x.png
   title: 'Reuben Sun'
