--- a/themes/volantis/_config.yml
+++ b/themes/volantis/_config.yml
@@ -185,6 +185,10 @@ cover:
       icon: fa-solid fa-gear
       img: #volantis-static/media/twemoji/assets/svg/1f516.svg #  https://cdn.jsdelivr.net/gh/twitter/twemoji@13.0/assets/svg/1f516.svg
       url: /categories/engine
+    - name: AI
+      icon: fa-solid fa-microchip
+      img:
+      url: /categories/ai
     - name: 编程
       icon: fa-solid fa-code
       img: #volantis-static/media/twemoji/assets/svg/1f396.svg #  https://cdn.jsdelivr.net/gh/twitter/twemoji@13.0/assets/svg/1f396.svg
